--- a/index.html
+++ b/index.html
@@ -153,12 +153,12 @@ window.Quarto = {
 <span class="menu-text">About</span></a>
   </li>  
   <li class="nav-item compact">
-    <a class="nav-link" href="https://github.com/"> <i class="bi bi-github" role="img">
+    <a class="nav-link" href="https://github.com/nwsb0"> <i class="bi bi-github" role="img">
 </i> 
 <span class="menu-text"></span></a>
   </li>  
   <li class="nav-item compact">
-    <a class="nav-link" href="https://twitter.com"> <i class="bi bi-twitter" role="img">
+    <a class="nav-link" href="https://twitter.com/noahbuchholtz"> <i class="bi bi-twitter" role="img">
 </i> 
 <span class="menu-text"></span></a>
   </li>  
@@ -191,7 +191,7 @@ window.Quarto = {
 <!-- margin-sidebar -->
     <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
         
-    <h5 class="quarto-listing-category-title">Categories</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">All <span class="quarto-category-count">(2)</span></div><div class="category" data-category="analysis">analysis <span class="quarto-category-count">(1)</span></div><div class="category" data-category="code">code <span class="quarto-category-count">(1)</span></div><div class="category" data-category="news">news <span class="quarto-category-count">(2)</span></div></div></div>
+    <h5 class="quarto-listing-category-title">Categories</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">All <span class="quarto-category-count">(3)</span></div><div class="category" data-category="Jokic">Jokic <span class="quarto-category-count">(1)</span></div><div class="category" data-category="analysis">analysis <span class="quarto-category-count">(1)</span></div><div class="category" data-category="awards">awards <span class="quarto-category-count">(1)</span></div><div class="category" data-category="basketball">basketball <span class="quarto-category-count">(1)</span></div><div class="category" data-category="code">code <span class="quarto-category-count">(1)</span></div><div class="category" data-category="news">news <span class="quarto-category-count">(2)</span></div></div></div>
 <!-- main -->
 <main class="content quarto-banner-title-block column-page-left" id="quarto-document-content">
 
@@ -205,7 +205,46 @@ window.Quarto = {
 
 <div class="quarto-listing quarto-listing-container-default" id="listing-listing">
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-categories="news,code,analysis" data-listing-date-sort="1712120400000" data-listing-file-modified-sort="1712172568823" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="9">
+<div class="quarto-post image-right" data-index="0" data-categories="basketball,awards,Jokic" data-listing-date-sort="1713070800000" data-listing-file-modified-sort="1713149597083" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="7" data-listing-word-count-sort="1319">
+<div class="thumbnail">
+<p><a href="./posts/jokic-mvp-race/index.html" class="no-external"></a></p><a href="./posts/jokic-mvp-race/index.html" class="no-external">
+<p><img src="./posts/jokic-mvp-race/jokic-mvps.jpg" class="thumbnail-image"></p>
+</a><p><a href="./posts/jokic-mvp-race/index.html" class="no-external"></a></p>
+</div>
+<div class="body">
+<h3 class="no-anchor listing-title">
+<a href="./posts/jokic-mvp-race/index.html" class="no-external">Is Nikola Jokic in line to win his third MVP award in four years?</a>
+</h3>
+<div class="listing-subtitle">
+<a href="./posts/jokic-mvp-race/index.html" class="no-external"></a>
+</div>
+<div class="listing-categories">
+<div class="listing-category" onclick="window.quartoListingCategory('basketball'); return false;">
+basketball
+</div>
+<div class="listing-category" onclick="window.quartoListingCategory('awards'); return false;">
+awards
+</div>
+<div class="listing-category" onclick="window.quartoListingCategory('Jokic'); return false;">
+Jokic
+</div>
+</div>
+<div class="listing-description">
+<a href="./posts/jokic-mvp-race/index.html" class="no-external">In one of the tightest Most Valuable Player races we’ve seen over the last decade, all the signs point to the Joker cementing himself amongst the all-time greats.</a>
+</div>
+</div>
+<div class="metadata">
+<a href="./posts/jokic-mvp-race/index.html" class="no-external">
+<div class="listing-date">
+Apr 14, 2024
+</div>
+<div class="listing-author">
+Noah Buchholtz
+</div>
+</a>
+</div>
+</div>
+<div class="quarto-post image-right" data-index="1" data-categories="news,code,analysis" data-listing-date-sort="1712120400000" data-listing-file-modified-sort="1712172568823" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="9">
 <div class="thumbnail">
 <p><a href="./posts/post-with-code/index.html" class="no-external"></a></p><a href="./posts/post-with-code/index.html" class="no-external">
 <p><img src="./posts/post-with-code/image.jpg" class="thumbnail-image"></p>
@@ -244,7 +283,7 @@ Harlow Malloc
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="1" data-categories="news" data-listing-date-sort="1711861200000" data-listing-file-modified-sort="1712172568822" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="32">
+<div class="quarto-post image-right" data-index="2" data-categories="news" data-listing-date-sort="1711861200000" data-listing-file-modified-sort="1712172568822" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="32">
 <div class="thumbnail">
 <p><a href="./posts/welcome/index.html" class="no-external"></a></p><a href="./posts/welcome/index.html" class="no-external">
 <p class="card-img-top"><img src="posts/welcome/thumbnail.jpg"  class="thumbnail-image card-img"/></p>
