Who were the best offensive performers in the 2023-24 NBA season?

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ window.Quarto = {
 <!-- margin-sidebar -->
     <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
         
-    <h5 class="quarto-listing-category-title">Categories</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">All <span class="quarto-category-count">(3)</span></div><div class="category" data-category="Jokic">Jokic <span class="quarto-category-count">(1)</span></div><div class="category" data-category="analysis">analysis <span class="quarto-category-count">(1)</span></div><div class="category" data-category="awards">awards <span class="quarto-category-count">(1)</span></div><div class="category" data-category="basketball">basketball <span class="quarto-category-count">(1)</span></div><div class="category" data-category="code">code <span class="quarto-category-count">(1)</span></div><div class="category" data-category="news">news <span class="quarto-category-count">(2)</span></div></div></div>
+    <h5 class="quarto-listing-category-title">Categories</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">All <span class="quarto-category-count">(4)</span></div><div class="category" data-category="2023-24 season">2023-24 season <span class="quarto-category-count">(1)</span></div><div class="category" data-category="Jokic">Jokic <span class="quarto-category-count">(1)</span></div><div class="category" data-category="NBA">NBA <span class="quarto-category-count">(1)</span></div><div class="category" data-category="analysis">analysis <span class="quarto-category-count">(1)</span></div><div class="category" data-category="awards">awards <span class="quarto-category-count">(1)</span></div><div class="category" data-category="basketball">basketball <span class="quarto-category-count">(2)</span></div><div class="category" data-category="code">code <span class="quarto-category-count">(1)</span></div><div class="category" data-category="news">news <span class="quarto-category-count">(2)</span></div></div></div>
 <!-- main -->
 <main class="content quarto-banner-title-block column-page-left" id="quarto-document-content">
 
@@ -205,7 +205,46 @@ window.Quarto = {
 
 <div class="quarto-listing quarto-listing-container-default" id="listing-listing">
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-categories="basketball,awards,Jokic" data-listing-date-sort="1713070800000" data-listing-file-modified-sort="1713149597083" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="7" data-listing-word-count-sort="1319">
+<div class="quarto-post image-right" data-index="0" data-categories="basketball,2023-24 season,NBA" data-listing-date-sort="1714798800000" data-listing-file-modified-sort="1714933555254" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="8" data-listing-word-count-sort="1519">
+<div class="thumbnail">
+<p><a href="./posts/best-scorers-nba/index.html" class="no-external"></a></p><a href="./posts/best-scorers-nba/index.html" class="no-external">
+<p><img src="./posts/best-scorers-nba/nba_postseason_preview_cr_16x9.jpg" class="thumbnail-image"></p>
+</a><p><a href="./posts/best-scorers-nba/index.html" class="no-external"></a></p>
+</div>
+<div class="body">
+<h3 class="no-anchor listing-title">
+<a href="./posts/best-scorers-nba/index.html" class="no-external">Who were the best offensive performers for the 2023-24 NBA season?</a>
+</h3>
+<div class="listing-subtitle">
+<a href="./posts/best-scorers-nba/index.html" class="no-external"></a>
+</div>
+<div class="listing-categories">
+<div class="listing-category" onclick="window.quartoListingCategory('basketball'); return false;">
+basketball
+</div>
+<div class="listing-category" onclick="window.quartoListingCategory('2023-24 season'); return false;">
+2023-24 season
+</div>
+<div class="listing-category" onclick="window.quartoListingCategory('NBA'); return false;">
+NBA
+</div>
+</div>
+<div class="listing-description">
+<a href="./posts/best-scorers-nba/index.html" class="no-external">At this time of year, there’s always debates around the big awards like Most Valuable Player (MVP), Defensive Player of the Year (DPoY), Rookie of the Year (RotY), etc. and…</a>
+</div>
+</div>
+<div class="metadata">
+<a href="./posts/best-scorers-nba/index.html" class="no-external">
+<div class="listing-date">
+May 4, 2024
+</div>
+<div class="listing-author">
+Noah Buchholtz
+</div>
+</a>
+</div>
+</div>
+<div class="quarto-post image-right" data-index="1" data-categories="basketball,awards,Jokic" data-listing-date-sort="1713070800000" data-listing-file-modified-sort="1713378311907" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="7" data-listing-word-count-sort="1321">
 <div class="thumbnail">
 <p><a href="./posts/jokic-mvp-race/index.html" class="no-external"></a></p><a href="./posts/jokic-mvp-race/index.html" class="no-external">
 <p><img src="./posts/jokic-mvp-race/jokic-mvps.jpg" class="thumbnail-image"></p>
@@ -244,7 +283,7 @@ Noah Buchholtz
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="1" data-categories="news,code,analysis" data-listing-date-sort="1712120400000" data-listing-file-modified-sort="1712172568823" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="9">
+<div class="quarto-post image-right" data-index="2" data-categories="news,code,analysis" data-listing-date-sort="1712120400000" data-listing-file-modified-sort="1712172568823" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="9">
 <div class="thumbnail">
 <p><a href="./posts/post-with-code/index.html" class="no-external"></a></p><a href="./posts/post-with-code/index.html" class="no-external">
 <p><img src="./posts/post-with-code/image.jpg" class="thumbnail-image"></p>
@@ -283,7 +322,7 @@ Harlow Malloc
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="2" data-categories="news" data-listing-date-sort="1711861200000" data-listing-file-modified-sort="1712172568822" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="32">
+<div class="quarto-post image-right" data-index="3" data-categories="news" data-listing-date-sort="1711861200000" data-listing-file-modified-sort="1712172568822" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="32">
 <div class="thumbnail">
 <p><a href="./posts/welcome/index.html" class="no-external"></a></p><a href="./posts/welcome/index.html" class="no-external">
 <p class="card-img-top"><img src="posts/welcome/thumbnail.jpg"  class="thumbnail-image card-img"/></p>
